# live555_starter

./: CMakeLists.txt  README.md
src/: main.cpp  stream_server.cpp  stream_server.h
